--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   dio: ^5.7.0
   connectivity_plus: ^6.0.5
   material_design_icons_flutter: ^7.0.7296
-  lottie_screen_onboarding_flutter: ^1.0.2
+  lottie_screen_onboarding_flutter: ^1.1.3
+  shared_preferences: ^2.2.3
 
 
 dev_dependencies:
