--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   geolocator: ^12.0.0
   intl: ^0.19.0
   flutter_bloc: ^8.1.6
-  flutter_svg: ^2.0.10+1
   lottie: ^3.1.2
   flutter_launcher_icons: ^0.14.0
   dio: ^5.7.0
@@ -48,6 +47,8 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   lottie_screen_onboarding_flutter: ^1.1.3
   shared_preferences: ^2.2.3
+  permission_handler: ^11.3.1
+  google_fonts: ^6.2.0
 
 
 dev_dependencies:
