--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   shared_preferences: ^2.2.3
   permission_handler: ^11.3.1
   google_fonts: ^6.2.0
+  http: ^1.2.2
+  logger: ^2.4.0
 
 
 dev_dependencies:
